fix layout issues hopefully

--- a/pyxiv/static/style.css
+++ b/pyxiv/static/style.css
@@ -440,7 +440,11 @@ hr {
 	font-size: 14px;
 	display: flex;
 	align-items: center;
-	gap: 4px;
+	flex-wrap: wrap;
+}
+
+.illust-area .illust-tags .tag a {
+	margin-right: 4px
 }
 
 .illust-area .illust-tags .tag i {
